--- a/public/index.html
+++ b/public/index.html
@@ -598,209 +598,163 @@ function FilterSortControls({ platformFilter, setPlatformFilter, brandFilter, se
 }
 
   const { useState, useEffect } = React;
+  const API_URL = 'https://resalemanager.onrender.com';
 
-    const API_URL = 'https://resalemanager.onrender.com';
+  function App() {
+    const [items, setItems] = useState([]);
+    const [loading, setLoading] = useState(true);
+    const [error, setError] = useState(null);
+    const [showModal, setShowModal] = useState(false);
+    const [editingItem, setEditingItem] = useState(null);
+    const [platformFilter, setPlatformFilter] = useState('All');
+    const [brandFilter, setBrandFilter] = useState('All');
+    const [sortBy, setSortBy] = useState('name-asc');
 
-    function App() {
-      const [items, setItems] = useState([]);
-      const [loading, setLoading] = useState(true);
-      const [error, setError] = useState(null);
-      const [showModal, setShowModal] = useState(false);
-      const [editingItem, setEditingItem] = useState(null);
+    // Helper to get latest sale date
+    const getLatestSaleDate = (item) => {
+      if (!item) return null;
+      const sales = item.salesHistory || [];
+      const last = sales[sales.length - 1];
+      const raw = last?.date ?? last?.dateSold ?? item.dateSold ?? null;
+      return raw ? new Date(raw) : null;
+    };
 
-      // Load items
-      const loadItems = async () => {
-        try {
-          const res = await fetch(API_URL + '/api/items', { headers: { Accept: 'application/json' } });
-          if (!res.ok) throw new Error(`Failed to fetch: ${res.status} ${res.statusText}`);
-          const data = await res.json();
-          setItems(data.map(item => ({
-            ...item,
-            totalProfit: Number(item.totalProfit) || 0,
-            dateSold: item.salesHistory?.length > 0
-              ? item.salesHistory[item.salesHistory.length - 1].dateSold
-              : null
-          })));
-          setLoading(false);
-        } catch (err) {
-          console.error(err);
-          setError(err.message);
-          setLoading(false);
-        }
-      };
+    // Load items
+    const loadItems = async () => {
+      try {
+        const res = await fetch(API_URL + '/api/items', { headers: { Accept: 'application/json' } });
+        if (!res.ok) throw new Error(`Failed to fetch: ${res.status} ${res.statusText}`);
+        const data = await res.json();
+        setItems(data.map(item => ({
+          ...item,
+          totalProfit: Number(item.totalProfit) || 0,
+          dateSold: getLatestSaleDate(item)
+        })));
+        setLoading(false);
+      } catch (err) {
+        console.error(err);
+        setError(err.message);
+        setLoading(false);
+      }
+    };
 
-      // Save or update item
-      const handleSave = async (item) => {
-        try {
-          const method = editingItem ? 'PUT' : 'POST';
-          const id = editingItem?._id || editingItem?.name;
-          const url = editingItem ? `${API_URL}/api/items/${encodeURIComponent(id)}` : `${API_URL}/api/items`;
-          const res = await fetch(url, {
-            method,
-            headers: { 'Content-Type': 'application/json', Accept: 'application/json' },
-            body: JSON.stringify(item)
-          });
-          if (!res.ok) throw new Error(`Failed to save: ${res.status} ${res.statusText}`);
-          const saved = await res.json();
-          if (editingItem) {
-            setItems(items.map(i => (i._id === editingItem._id ? saved : i)));
-          } else {
-            setItems([...items, saved]);
-          }
-          setEditingItem(null);
-          setShowModal(false);
-        } catch (err) {
-          console.error(err);
-          alert(err.message);
-        }
-      };
-
-      // Delete item
-      const handleDelete = async (item) => {
-        try {
-          const id = item._id || item.name;
-          const res = await fetch(`${API_URL}/api/items/${encodeURIComponent(id)}`, { method: 'DELETE', headers: { Accept: 'application/json' } });
-          if (!res.ok) throw new Error(`Failed to delete: ${res.status} ${res.statusText}`);
-          setItems(items.filter(i => (i._id || i.name) !== id));
-        } catch (err) {
-          console.error(err);
-          alert(err.message);
-        }
-      };
-
-      const handleEdit = (item) => {
-        setEditingItem(item);
-        setShowModal(true);
-      };
-
-      const handleCancel = () => {
+    // Save or update item
+    const handleSave = async (item) => {
+      try {
+        const method = editingItem ? 'PUT' : 'POST';
+        const id = editingItem?._id || editingItem?.name;
+        const url = editingItem ? `${API_URL}/api/items/${encodeURIComponent(id)}` : `${API_URL}/api/items`;
+        const res = await fetch(url, {
+          method,
+          headers: { 'Content-Type': 'application/json', Accept: 'application/json' },
+          body: JSON.stringify(item)
+        });
+        if (!res.ok) throw new Error(`Failed to save: ${res.status} ${res.statusText}`);
+        const saved = await res.json();
+        if (editingItem) setItems(items.map(i => (i._id === editingItem._id ? saved : i)));
+        else setItems([...items, saved]);
         setEditingItem(null);
         setShowModal(false);
-      };
+      } catch (err) {
+        console.error(err);
+        alert(err.message);
+      }
+    };
 
-      useEffect(() => { loadItems(); }, []);
-      useEffect(() => {
-        if (showModal) document.body.classList.add('modal-open');
-        else document.body.classList.remove('modal-open');
-      }, [showModal]);
+    // Delete item
+    const handleDelete = async (item) => {
+      try {
+        const id = item._id || item.name;
+        const res = await fetch(`${API_URL}/api/items/${encodeURIComponent(id)}`, { method: 'DELETE', headers: { Accept: 'application/json' } });
+        if (!res.ok) throw new Error(`Failed to delete: ${res.status} ${res.statusText}`);
+        setItems(items.filter(i => (i._id || i.name) !== id));
+      } catch (err) {
+        console.error(err);
+        alert(err.message);
+      }
+    };
 
-      if (loading) return React.createElement('div', { className: 'loading-message' }, 'Loading inventory...');
-      if (error) return React.createElement('div', { className: 'error-message' }, 'Error: ' + error);
+    const handleEdit = (item) => { setEditingItem(item); setShowModal(true); };
+    const handleCancel = () => { setEditingItem(null); setShowModal(false); };
 
-// ---------- Helper: getLatestSaleDate ----------
-// Put this above your App component (or inside App before using it)
-function getLatestSaleDate(item) {
-  if (!item) return null;
+    useEffect(() => { loadItems(); }, []);
+    useEffect(() => { document.body.classList.toggle('modal-open', showModal); }, [showModal]);
 
-  // Prefer salesHistory last entry, support both "date" and "dateSold" keys
-  if (Array.isArray(item.salesHistory) && item.salesHistory.length > 0) {
-    const last = item.salesHistory[item.salesHistory.length - 1];
-    const raw = last?.date ?? last?.dateSold ?? item.dateSold ?? null;
-    if (raw == null) return null;
-    // numeric timestamp
-    if (typeof raw === 'number') {
-      const dnum = new Date(raw);
-      return isNaN(dnum.getTime()) ? null : dnum;
-    }
-    // If already a Date object
-    if (raw instanceof Date) {
-      return isNaN(raw.getTime()) ? null : raw;
-    }
-    // parse string
-    const parsed = new Date(raw);
-    return isNaN(parsed.getTime()) ? null : parsed;
+    if (loading) return React.createElement('div', { className: 'loading-message' }, 'Loading inventory...');
+    if (error) return React.createElement('div', { className: 'error-message' }, 'Error: ' + error);
+
+    // Filter & sort
+    const filteredItems = items
+      .filter(item => (platformFilter === 'All' || item.platform === platformFilter) &&
+                      (brandFilter === 'All' || item.brand === brandFilter))
+      .sort((a, b) => {
+        const [field, dir] = sortBy.split('-');
+        let valA, valB;
+        if (field === 'name') { valA = a.name?.toLowerCase(); valB = b.name?.toLowerCase(); }
+        else if (field === 'profit') { valA = a.totalProfit; valB = b.totalProfit; }
+        else if (field === 'dateSold') {
+          valA = a.dateSold ? a.dateSold.getTime() : (dir === 'asc' ? Infinity : -Infinity);
+          valB = b.dateSold ? b.dateSold.getTime() : (dir === 'asc' ? Infinity : -Infinity);
+        } else { valA = a[field]; valB = b[field]; }
+        return dir === 'asc' ? (valA < valB ? -1 : valA > valB ? 1 : 0) : (valA > valB ? -1 : valA < valB ? 1 : 0);
+      });
+
+    const totalProfit = filteredItems.reduce((sum, i) => sum + (i.totalProfit || 0), 0);
+
+    // Render
+    return React.createElement('div', { className: 'app-container' },
+      React.createElement('h1', null, 'Clothing Inventory'),
+      React.createElement('div', null, 'Total Profit: $' + totalProfit.toFixed(2)),
+      React.createElement('button', { onClick: () => setShowModal(true) }, 'Add New Item'),
+      React.createElement('ul', null,
+        filteredItems.map(item => React.createElement('li', { key: item._id || item.name },
+          item.name + ' - $' + item.totalProfit,
+          ' ',
+          React.createElement('button', { onClick: () => handleEdit(item) }, 'Edit'),
+          ' ',
+          React.createElement('button', { onClick: () => handleDelete(item) }, 'Delete')
+        ))
+      ),
+      showModal && React.createElement('div', { className: 'modal' },
+        React.createElement('h2', null, editingItem ? 'Edit Item' : 'Add Item'),
+        React.createElement('form', {
+          onSubmit: e => {
+            e.preventDefault();
+            handleSave({
+              name: e.target.name.value,
+              totalProfit: Number(e.target.totalProfit.value)
+            });
+          }
+        },
+          React.createElement('input', { name: 'name', defaultValue: editingItem?.name || '', placeholder: 'Name', required: true }),
+          React.createElement('input', { name: 'totalProfit', defaultValue: editingItem?.totalProfit || 0, type: 'number', placeholder: 'Total Profit', required: true }),
+          React.createElement('button', { type: 'submit' }, 'Save'),
+          React.createElement('button', { type: 'button', onClick: handleCancel }, 'Cancel')
+        )
+      )
+    );
   }
 
-  // fallback to item.dateSold if present
-  if (item.dateSold != null) {
-    if (typeof item.dateSold === 'number') {
-      const dnum = new Date(item.dateSold);
-      return isNaN(dnum.getTime()) ? null : dnum;
-    }
-    if (item.dateSold instanceof Date) {
-      return isNaN(item.dateSold.getTime()) ? null : item.dateSold;
-    }
-    const parsed = new Date(item.dateSold);
-    return isNaN(parsed.getTime()) ? null : parsed;
-  }
 
-  return null;
-}
-
-
-  // Filter and sort items
-  const filteredItems = items.filter(item => {
-    const matchesPlatform = platformFilter === 'All' || item.platform === platformFilter;
-    const matchesBrand = brandFilter === 'All' || item.brand === brandFilter;
-    return matchesPlatform && matchesBrand;
-  }).sort((a, b) => {
-// ---------- Use this where you compute filteredItems.sort(...) ----------
-  const [field, direction] = sortBy.split('-');
-  let valueA, valueB;
-
-  if (field === 'name') {
-    valueA = (a.name || '').toString().toLowerCase();
-    valueB = (b.name || '').toString().toLowerCase();
-  } else if (field === 'profit') {
-    valueA = typeof a.totalProfit === 'number' ? a.totalProfit : 0;
-    valueB = typeof b.totalProfit === 'number' ? b.totalProfit : 0;
-  } else if (field === 'dateSold') {
-    const dateA = getLatestSaleDate(a);
-    const dateB = getLatestSaleDate(b);
-    valueA = dateA ? dateA.getTime() : (direction === 'asc' ? Infinity : -Infinity);
-    valueB = dateB ? dateB.getTime() : (direction === 'asc' ? Infinity : -Infinity);
+  console.log('Checking for required libraries...');
+  if (!window.React || !window.ReactDOM) {
+    console.error('Failed to load React or ReactDOM. Check CDN URLs.');
   } else {
-    valueA = a[field];
-    valueB = b[field];
+    console.log('Rendering React app...');
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+
+    // Render App with plain React.createElement
+    // If you have an ErrorBoundary function, you can wrap App like this:
+    // React.createElement(ErrorBoundary, null, React.createElement(App))
+
+    root.render(
+      React.createElement(
+        window.ErrorBoundary || React.Fragment, // fallback to Fragment if ErrorBoundary not defined
+        null,
+        React.createElement(App)
+      )
+    );
   }
-
-  // final compare
-  if (valueA < valueB) return direction === 'asc' ? -1 : 1;
-  if (valueA > valueB) return direction === 'asc' ? 1 : -1;
-  return 0;
-
-  });
-
-  const totalProfit = filteredItems.reduce((sum, item) => sum + (typeof item.totalProfit === 'number' ? item.totalProfit : 0), 0);
-
-  return (
-    <ErrorBoundary>
-      <div>
-        <h1>Clothing Inventory</h1>
-        <div className="total-profit">Total Profit: ${totalProfit.toFixed(2)}</div>
-        <FilterSortControls
-          platformFilter={platformFilter}
-          setPlatformFilter={setPlatformFilter}
-          brandFilter={brandFilter}
-          setBrandFilter={setBrandFilter}
-          sortBy={sortBy}
-          setSortBy={setSortBy}
-          brands={brands}
-        />
-        <button type="button" className="add-button" onClick={() => setShowModal(true)}>Add New Item</button>
-        <ItemList items={filteredItems} onEdit={handleEdit} onDelete={handleDelete} />
-        {showModal && (
-          <ItemForm item={editingItem} onSave={handleSave} onCancel={handleCancel} />
-        )}
-      </div>
-    </ErrorBoundary>
-  );
-}
-
-
-    // Render App
-    console.log('Checking for required libraries...');
-    if (!window.React || !window.ReactDOM || !window.Babel) {
-      console.error('Failed to load React, ReactDOM, or Babel. Check CDN URLs.');
-    } else {
-      console.log('Rendering React app...');
-      const root = ReactDOM.createRoot(document.getElementById('root'));
-      root.render(
-        <ErrorBoundary>
-          <App />
-        </ErrorBoundary>
-      );
-    }
   </script>
 </body>
 </html>
