Add Total Revenue

--- a/public/index.html
+++ b/public/index.html
@@ -924,14 +924,19 @@ console.log("✅ Frontend script running");
     }
 
     .total-profit {
-      background: #e9f5ef;
-      color: #216e39;
+      background-color: #e8f0fe;
       padding: 1rem;
-      border-radius: 10px;
+      border-radius: 0.5rem;
       text-align: center;
-      font-weight: 600;
-      margin-bottom: 1.5rem;
+      font-size: 1.1rem;
+      font-weight: 500;
+      margin-bottom: 1rem;
+      line-height: 1.6;
     }
+    .total-profit strong {
+      color: #222;
+    }
+
 
     button {
       cursor: pointer;
