--- a/public/index.html
+++ b/public/index.html
@@ -1144,6 +1144,52 @@ console.log("✅ Frontend script running");
       width: 100%;
       max-height: 300px;
     }
+    .summary-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 1rem;
+    margin: 1.5rem 0;
+  }
+
+  .summary-card {
+    background: #ffffff;
+    border-radius: 0.75rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+    text-align: center;
+    padding: 1.25rem;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
+
+  .summary-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .summary-card h3 {
+    font-size: 1rem;
+    color: #555;
+    margin-bottom: 0.5rem;
+  }
+
+  .summary-card p {
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin: 0;
+  }
+
+  /* Color accents */
+  .summary-card.profit p {
+    color: #2e7d32; /* green */
+  }
+
+  .summary-card.revenue p {
+    color: #1565c0; /* blue */
+  }
+
+  .summary-card.margin p {
+    color: #f57c00; /* orange */
+  }
+
   </style>
 
   <!-- ✅ React app with Chart.js -->
