--- a/public/index.html
+++ b/public/index.html
@@ -1190,6 +1190,19 @@ console.log("✅ Frontend script running");
     color: #f57c00; /* orange */
   }
 
+  .filter-sort-controls select {
+    padding: 0.4rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 0.9rem;
+  }
+  .filter-sort-controls label {
+    display: block;
+    font-weight: 500;
+    margin-bottom: 4px;
+    color: #333;
+  }
+
   </style>
 
   <!-- ✅ React app with Chart.js -->
